# auto-suggest

./: .gitignore  README.md  auto-suggest.plugin.zsh
auto-suggest/: pyproject.toml
auto-suggest/auto_suggest/: __init__.py  main.py
